--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -26,10 +26,22 @@
 
       .clients-block {
         display: grid;
-        grid-template-columns: repeat(2, calc(50% - 10px));
+        grid-template-columns: calc(50%) calc(50% - 30px);
         grid-column-gap: 20px;
         margin-top: 120px;
         align-items: center;
+        padding: 0 50px;
+
+        @include small-desktop-screen {
+          margin-top: 40px;
+          grid-row-gap: 10px;
+        }
+
+
+        @include tablet-landscape-screen {
+          margin-left: 24px;
+          margin-right: 24px;
+        }
 
         @include tablet-screen {
           grid-template-columns: 100%;
@@ -179,8 +191,16 @@
         &.splide__arrow--prev {
           left: -38px;
 
+          @media screen and (max-width: 1300px){
+            left: 0;
+          }
+
+          @include small-desktop-screen {
+            left: -38px;
+          }
+
           @include tablet-landscape-screen {
-            left: -20px;
+            left: 0;
           }
 
           @include tablet-screen {
@@ -199,8 +219,16 @@
         &.splide__arrow--next {
           right: -38px;
 
+          @media screen and (max-width: 1300px){
+            right: 0;
+          }
+
+          @include small-desktop-screen {
+            right: -38px;
+          }
+
           @include tablet-landscape-screen {
-            right: -20px;
+            right: 0;
           }
 
           @include tablet-screen {
@@ -221,6 +249,10 @@
       .splide__pagination {
         padding-top: 100px;
         position: relative;
+
+        @include small-desktop-screen {
+          padding-top: 36px;
+        }
 
         @include tablet-screen {
           padding: 0;
@@ -267,11 +299,7 @@
         &.splide__arrow--prev {
           left: -38px !important;
 
-          @include small-desktop-screen {
-            left: 0 !important;
-          }
-
-          @include tablet-landscape-screen {
+          @media screen and (max-width: 1300px){
             left: 0 !important;
           }
 
@@ -287,11 +315,7 @@
         &.splide__arrow--next {
           right: -38px !important;
 
-          @include small-desktop-screen {
-            right: 0 !important;
-          }
-
-          @include tablet-landscape-screen {
+          @media screen and (max-width: 1300px){
             right: 0 !important;
           }
 
