--- a/_includes/clients/clients.scss
+++ b/_includes/clients/clients.scss
@@ -32,7 +32,7 @@
     @include flex(column, center, center);
     margin: 60px auto 0;
 
-    @include tablet-screen {
+    @include small-tablet-screen {
       margin-top: 30px;
       width: 100%;
     }
