--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -35,6 +35,7 @@
         @include small-desktop-screen {
           margin-top: 40px;
           grid-row-gap: 10px;
+          padding: 0;
         }
 
 
