--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -74,8 +74,8 @@
         }
 
         &.without-button {
-          grid-template-columns: calc(50%) 480px;
           grid-row-gap: 20px;
+          padding: 0 44px;
 
           @include tablet-screen {
             grid-template-columns: 100%;
