--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -298,6 +298,7 @@ body {
   .content {
     box-sizing: content-box;
     max-width: 1200px;
+    padding: 0 20px;
 
     @include small-desktop-screen {
       max-width: 960px;
