--- a/_includes/contact-us/contact-us.scss
+++ b/_includes/contact-us/contact-us.scss
@@ -19,7 +19,8 @@
     }
 
     .text-center {
-      margin-bottom: 74px;
+      margin: 0 auto 74px;
+      max-width: 960px;
 
       @include tablet-landscape-screen {}
       padding: 0 55px;
@@ -38,7 +39,6 @@
         @include font(24px, 300);
         line-height: 1.5;
         margin: 0 auto;
-        max-width: 600px;
 
         @include tablet-screen {
           @include font(20px, 300);
