--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -5,7 +5,6 @@
     max-width: 1200px;
 
     @include tablet-screen {
-      padding: 0 20px;
     }
 
     @include small-tablet-screen {
@@ -18,6 +17,10 @@
         flex: 0 0 100%;
         padding: 0 30px;
         position: relative;
+
+        @include tablet-screen {
+          padding: 0;
+        }
 
         @include small-tablet-screen {
           padding: 0;
@@ -38,7 +41,6 @@
           padding: 0;
         }
 
-
         @include tablet-landscape-screen {
           margin-left: 24px;
           margin-right: 24px;
@@ -48,7 +50,8 @@
           grid-template-columns: 100%;
           grid-column-gap: 0;
           grid-row-gap: 20px;
-          margin-top: 40px;
+          margin: 40px auto 0;
+          max-width: 600px;
         }
 
         &:nth-child(2n) {
@@ -205,7 +208,7 @@
           }
 
           @include tablet-screen {
-            left: -70px;
+            left: -20px;
           }
 
           @include small-tablet-screen {
@@ -233,7 +236,7 @@
           }
 
           @include tablet-screen {
-            right: -70px;
+            right: -20px;
           }
 
           @include small-tablet-screen {
