--- a/_includes/partnership/partnership.scss
+++ b/_includes/partnership/partnership.scss
@@ -26,8 +26,8 @@
       }
 
       @include small-tablet-screen {
-        padding-right: 20px;
-        padding-left: 20px;
+        margin-right: 20px;
+        margin-left: 20px;
       }
     }
 
