--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -85,6 +85,7 @@
             grid-column-gap: 0;
             grid-row-gap: 20px;
             margin-top: 80px;
+            padding: 0;
           }
         }
 
@@ -297,14 +298,10 @@
         top: 58%;
 
         &.splide__arrow--prev {
-          left: -38px !important;
-
-          @media screen and (max-width: 1300px){
-            left: 0 !important;
-          }
+          left: 20px !important;
 
           @include tablet-screen {
-            left: -48px !important;
+            left: 0 !important;
           }
 
           @include small-tablet-screen {
@@ -313,14 +310,10 @@
         }
 
         &.splide__arrow--next {
-          right: -38px !important;
-
-          @media screen and (max-width: 1300px){
-            right: 0 !important;
-          }
+          right: 20px !important;
 
           @include tablet-screen {
-            right: -48px !important;
+            right: 0 !important;
           }
 
           @include small-tablet-screen {
