--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,5 +21,6 @@
   {% include footer/footer.html %}
   <script src="{{ site.url }}/assets/scripts/script.js?q=20220805"></script>
   <script src="{{ site.url }}/assets/scripts/splide.min.js"></script>
+  <script type="text/javascript" src="https://widget.clutch.co/static/js/widget.js"></script>
 </body>
 </html>
