--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -151,15 +151,31 @@ body {
   max-width: 760px;
   padding: 95px 0;
 
+  h1 {
+    font-size: 36px;
+    margin: 0;
+  }
+
   @include small-desktop-screen {
-    max-width: 620px;
+    max-width: 640px;
+    font-size: 18px;
+
+    h1 {
+      font-size: 32px;
+    }
   }
 
   @include tablet-screen {
-    max-width: 100%;
-    padding-top: 75px;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding: 75px 20px 0;
+    margin: 0 auto;
+  }
+
+  @include small-tablet-screen {
+    font-size: 16px;
+
+    h1 {
+      font-size: 28px;
+    }
   }
 
   @include mobile-screen {
