Adding loading="lazy" to the old Clutch iframe

--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -14,8 +14,13 @@
       {% for item in content.descriptions %}
       <div class="description">{{ item }}</div>
       {% endfor %}
-      <script type ="text/javascript" src="https://widget.clutch.co/static/js/widget.js" defer> </script>
-      <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="45" data-nofollow="true" data-expandifr="true" data-scale="100" data-clutchcompany-id="1403478"></div>
+      <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="50"
+           data-clutchcompany-id="1403478">
+        <iframe id="iframe-0.9792492733831788" width="100%" 
+                src="https://widget.clutch.co/widgets/get/2?ref_domain=implex.dev&amp;uid=1403478&amp;ref_path=/"
+                loading="lazy"
+                height="50px" style="border: none; display: block;" title="Implex Clutch Review Widget 2"></iframe>
+      </div>
     </div>
     <div class="collage">
       {% for item in content.images %}
