Main-bg and partnership-bg

--- a/_includes/intro/intro.scss
+++ b/_includes/intro/intro.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   align-items: center;
   text-align: center;
-  background-image: url("../../assets/img/background/main-bg.webp");
+  background-image: url("/assets/img/background/main-bg-1680.webp");
   background-size: cover;
   background-position: top;
 
