--- a/_includes/partnership/partnership.scss
+++ b/_includes/partnership/partnership.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 
 .partnership {
-  background: url("../../assets/img/background/partnership-bg.webp") no-repeat center center;
+  background: url("/assets/img/background/partnership-bg-1680.webp") no-repeat center center;
   background-size: cover;
 
   .overlay {
