--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -15,7 +15,7 @@
       <div class="description">{{ item }}</div>
       {% endfor %}
       <script type ="text/javascript" src="https://widget.clutch.co/static/js/widget.js" defer> </script>
-      <div style="visibility: hidden;" class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="45" data-nofollow="true" data-expandifr="true" data-scale="100" data-clutchcompany-id="1403478"></div>
+      <div style="display: none;" class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="45" data-nofollow="true" data-expandifr="true" data-scale="100" data-clutchcompany-id="1403478"></div>
     </div>
     <div class="collage">
       {% for item in content.images %}
