Clutch widget: script in the head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ site.url }}/assets/css/splide-skyblue.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css" />
+    <script type ="text/javascript" src="https://widget.clutch.co/static/js/widget.js" defer loading="lazy"> </script>
     {% include _head/head.html %}
 </head>
 <body>
