--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -14,8 +14,11 @@
       {% for item in content.descriptions %}
       <div class="description">{{ item }}</div>
       {% endfor %}
-      
-      <div style="display: none;" class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="45" data-nofollow="true" data-expandifr="true" data-scale="100" data-clutchcompany-id="1403478"></div>
+      <!--
+      <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="45" data-nofollow="true" data-expandifr="true" data-scale="100" data-clutchcompany-id="1403478" data-src="https://widget.clutch.co/static/js/widget.js"></div>
+    -->
+      <script class="lazyloading" type ="text/javascript" src="https://widget.clutch.co/static/js/widget.js" defer loading="lazy"> </script>
+      <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="45" data-nofollow="true" data-expandifr="true" data-scale="100" data-clutchcompany-id="1403478"></div>
     </div>
     <div class="collage">
       {% for item in content.images %}
