add alt and aria-label

--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -14,7 +14,9 @@
       {% for item in content.descriptions %}
       <div class="description">{{ item }}</div>
       {% endfor %}
-      <div class="clutch-widget"><a href="https://clutch.co/profile/implex#reviews" rel="noopener noreferrer nofollow" target="_blank"><img src="/assets/img/about/Clutch-6_reviews-186x44.webp" width="186" height="44"></a></div>
+      <div class="clutch-widget"><a aria-label="" href="https://clutch.co/profile/implex#reviews" rel="noopener noreferrer nofollow"
+                                    target="_blank"><img alt="" src="/assets/img/about/Clutch-6_reviews-186x44.webp"
+                                                         width="186" height="44"></a></div>
     </div>
     <div class="collage">
       {% for item in content.images %}
