--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -14,8 +14,8 @@
       {% for item in content.descriptions %}
       <div class="description">{{ item }}</div>
       {% endfor %}
-      <div class="clutch-widget"><a aria-label="" href="https://clutch.co/profile/implex#reviews" rel="noopener noreferrer nofollow"
-                                    target="_blank"><img alt="" src="/assets/img/about/Clutch-6_reviews-186x44.webp"
+      <div class="clutch-widget"><a aria-label="Clutch reviews" href="https://clutch.co/profile/implex#reviews" rel="noopener noreferrer nofollow"
+                                    target="_blank"><img alt="Clutch reviews" src="/assets/img/about/Clutch-6_reviews-186x44.webp"
                                                          width="186" height="44"></a></div>
     </div>
     <div class="collage">
