--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -80,11 +80,26 @@
           grid-row-gap: 20px;
           padding: 0 44px;
 
+          @include small-desktop-screen {
+            padding: 0;
+            margin: 40px auto;
+            max-width: 960px;
+          }
+
+          @include tablet-landscape-screen {
+            padding: 0 40px;
+          }
+
           @include tablet-screen {
             grid-template-columns: 100%;
             grid-column-gap: 0;
             grid-row-gap: 20px;
             margin-top: 80px;
+            padding: 0 40px;
+            max-width: 640px;
+          }
+
+          @include small-tablet-screen {
             padding: 0;
           }
         }
@@ -295,7 +310,15 @@
       }
 
       .splide__arrow {
-        top: 58%;
+        top: 52%;
+
+        @include small-desktop-screen {
+          top: 48%;
+        }
+
+        @include small-tablet-screen {
+          top: 50%;
+        }
 
         &.splide__arrow--prev {
           left: 20px !important;
