--- a/_includes/clients/clients.scss
+++ b/_includes/clients/clients.scss
@@ -34,14 +34,11 @@
 
     @include tablet-screen {
       width: 330px;
-    }
-
-    @include small-tablet-screen {
       margin-top: 30px;
     }
 
     @include mobile-screen {
-      width: calc(100% - 48px);
+      width: 100%;
     }
   }
 }
