--- a/_includes/intro/intro.scss
+++ b/_includes/intro/intro.scss
@@ -48,7 +48,7 @@
       .break-line {
         display: none;
 
-        @include small-desktop-screen {
+        @include tablet-screen {
           display: block;
         }
 
@@ -98,15 +98,15 @@
 
       .button {
         @include tablet-screen {
-          @include size(220px, 56px);
+          @include size(220px, 60px);
         }
 
         @include small-tablet-screen {
-          @include size(160px, 56px);
+          @include size(160px, 60px);
         }
 
         @include mobile-screen {
-          @include size(100%, 56px);
+          @include size(100%, 60px);
         }
       }
     }
