--- a/_includes/blog-posts/blog-posts.scss
+++ b/_includes/blog-posts/blog-posts.scss
@@ -1,42 +1,41 @@
 .blog-posts {
   .title {
-    font-size: 40px;
-    @include small-desktop-screen {
-      font-size: 38px;
-    }
+    font-size: 42px;
+    max-width: 640px;
+    margin-left: auto;
+    margin-right: auto;
 
     @include tablet-screen {
-      font-size: 38px;
+      font-size: 30px;
+      max-width: 600px;
     }
 
     @include small-tablet-screen {
       @include font(30px, 600);
+      max-width: 100%;
     }
   }
 
   .subtitle {
-    font-size: 30px;
+    @include font(24px, 300);
     line-height: 1.5;
-    max-width: 560px;
+    max-width: 640px;
     margin: 0 auto 90px;
 
     @include tablet-landscape-screen {
       margin-bottom: 80px;
     }
 
-    @include small-desktop-screen {
-      font-size: 22px;
-    }
-
     @include tablet-screen {
-      font-size: 22px;
+      font-size: 20px;
+      max-width: 600px;
     }
 
     @include small-tablet-screen {
       @include font(20px, 300);
       margin-bottom: 45px;
       padding: 0 20px;
-
+      max-width: 100%;
     }
   }
 
