--- a/_pages/careers/careers.scss
+++ b/_pages/careers/careers.scss
@@ -26,6 +26,7 @@
     h1 {
       text-align: center;
       margin: 0 0 90px;
+      font-size: 42px;
 
       @include small-tablet-screen {
         margin-bottom: 30px;
