--- a/_includes/contact-us/contact-us.scss
+++ b/_includes/contact-us/contact-us.scss
@@ -4,6 +4,9 @@
   background: url("/assets/img/background/footer-bg-1680.webp") no-repeat center center;
   background-size: cover;
 
+@include mobile-screen {
+  background: url("/assets/img/background/footer-bg-480.webp") no-repeat center center;
+}
 
   .overlay {
     @include size(100%, 100%);
