--- a/_includes/_head/google-analytics.html
+++ b/_includes/_head/google-analytics.html
@@ -1,11 +1,11 @@
-{% assign ga-id="G-X0000000" %}
+{% assign ga-id=site.data.google-analytics %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ga-id}}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ga-id.stage-ga-id}}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ga-id}}');
+  gtag('config', '{{ga-id.stage-ga-id}}');
 </script>
 <!-- End Google Analytics -->
