--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -8,11 +8,13 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% assign canonicalLink = page.canonicalLink | default: page.url | prepend: site.url %}
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/splide-skyblue.min.css?{{ site.time | date: '%s%N' }}">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/splide-skyblue.min.css?{{ site.time | date: '%s%N' }}">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css?{{ site.time | date: '%s%N' }}" />
+    <link rel="canonical" href="{{ canonicalLink }}"/>
     {% include _head/head.html %}
 </head>
 <body>
