--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -8,7 +8,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    {% assign canonicalLink = page.canonicalLink | default: page.url | prepend: site.url %}
+    {% assign canonicalLink = page.canonicalLink | default: page.url %}
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
