--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -8,8 +8,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-    {% assign canonicalLink = page.canonicalLink | default: page.url %}
-    <meta charset="utf-8">
+  {% assign canonicalLink = page.canonicalLink | default: page.url | prepend: page.url | prepend: site.url %}
+  <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ site.url }}/assets/css/splide-skyblue.min.css?{{ site.time | date: '%s%N' }}">
