--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -8,7 +8,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  {% assign canonicalLink = page.canonicalLink | default: page.url %}
+  {% assign pageUrl = page.url | prepend: site.url %}
+  {% assign canonicalLink = page.canonicalLink | default: pageUrl %}
   <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
