add lazyload plugin

--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -30,5 +30,6 @@
   {% include footer/footer.html careers = page.careers %}
   <script src="{{ site.url }}/assets/scripts/script.js?{{ site.time | date: '%s%N' }}"></script>
   <script src="{{ site.url }}/assets/scripts/splide.min.js?{{ site.time | date: '%s%N' }}"></script>
+  <script src="{{ site.url }}/assets/scripts/lazysizes.min.js?{{ site.time | date: '%s%N' }}" async=""></script>
 </body>
 </html>
