--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,5 +24,6 @@
   {% include footer/footer.html %}
   <script src="{{ site.url }}/assets/scripts/script.js?{{ site.time | date: '%s%N' }}"></script>
   <script src="{{ site.url }}/assets/scripts/splide.min.js?{{ site.time | date: '%s%N' }}"></script>
+  <script src="{{ site.url }}/assets/scripts/lazysizes.min.js?{{ site.time | date: '%s%N' }}" async=""></script>
 </body>
 </html>
