--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -16,7 +16,7 @@
       {% endfor %}
       <div class="clutch-widget">
         <iframe class="lazyload" id="iframe-0.780850917681055" width="100%"
-                data-src="https://widget.clutch.co/widgets/get/2?ref_domain=oldsite.implex.dev&amp;uid=1403478&amp;ref_path=/"
+                data-src="https://widget.clutch.co/widgets/get/2?ref_domain=implex.dev&amp;uid=1403478&amp;ref_path=/"
                 height="50px" style="border: none; display: block;" title="Implex Clutch Review Widget 2"></iframe>
       </div>
     </div>
