add og image for vacancy and add tag manager

--- a/_layouts/vacancy.html
+++ b/_layouts/vacancy.html
@@ -21,6 +21,9 @@
     {% include _head/head.html %}
 </head>
 <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TK5WJ8"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
   {% include header/header.html black=true %}
   <div class="vacancy">
     <div class="post-content">
