--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -20,6 +20,11 @@
     {% include _head/head.html %}
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TK5WJ8"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
   {% include header/header.html black=true %}
   {{ content }}
   {% if page.showSlider %}
