--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
     {% include _head/head.html %}
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TK5WJ8"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   {% include header/header.html %}
   {{ content }}
   {% include footer/footer.html %}
