Best of Masters the whole case in one commit. Plus 1st picture change in Quotium

--- a/_pages/case-study/quotium/quotium.scss
+++ b/_pages/case-study/quotium/quotium.scss
@@ -1,6 +1,6 @@
 .quotium {
   #image1 {
-    height: 560px;
+    background-size: contain;
 
     @include small-desktop-screen {
       height: 100%;
