--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -34,6 +34,10 @@
 @import "admit-me";
 @import "smartlane";
 @import "wikiart";
+@import "bom";
+@import "bsg";
+@import "percona";
+@import "quotium";
 
 @font-face {
   font-family: 'Roboto';
