--- a/_pages/case-study/yoy/yoy.scss
+++ b/_pages/case-study/yoy/yoy.scss
@@ -29,6 +29,10 @@
     @include small-tablet-screen {
       padding: 0;
     }
+
+    @include mobile-screen {
+      height: 270px;
+    }
   }
 
   .logos-row.yoy-logos {
