Small change in Quotium case, change its name to CyberQuantic

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -37,7 +37,7 @@
 @import "bom";
 @import "bsg";
 @import "percona";
-@import "quotium";
+@import "cyberquantic";
 
 @font-face {
   font-family: 'Roboto';
